--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Zoom In</title>
     <link rel="stylesheet" href="styles.css">
     <meta name="viewport" content="width=device-width">
+    <link rel="shortcut icon" href="/img/logo.png" type="image/x-icon">
     <!-- <script src="script.js" defer></script> -->
 </head>
 <body>
