--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="intro">
-        <h1 id="title">Tap or Click Start to Begin</h1>
+        <h1 id="title">Tap or Click <span id="startButtonMenu">Start</span> to Begin</h1>
     </div>
     
     <h1 id="score">0</h1>
